// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameFinished should match snapshot when circle wins 1`] = `
<div
  className="restartAlignment visible"
>
  <Typography
    className="winnerText"
    use="headline5"
  >
    <Icon
      className="floatLeft winnerIconContainer"
      icon={
        Object {
          "icon": "o",
          "size": "large",
        }
      }
    />
    <span
      className="floatRight"
    >
      wins!
    </span>
  </Typography>
  <withRipple(Button)
    dense={true}
    onClick={[Function]}
    raised={true}
  >
    Play Again
  </withRipple(Button)>
</div>
`;

exports[`GameFinished should match snapshot when cross wins 1`] = `
<div
  className="restartAlignment visible"
>
  <Typography
    className="winnerText"
    use="headline5"
  >
    <Icon
      className="floatLeft winnerIconContainer"
      icon={
        Object {
          "icon": "x",
          "size": "large",
        }
      }
    />
    <span
      className="floatRight"
    >
      wins!
    </span>
  </Typography>
  <withRipple(Button)
    dense={true}
    onClick={[Function]}
    raised={true}
  >
    Play Again
  </withRipple(Button)>
</div>
`;

exports[`GameFinished should match snapshot when draw 1`] = `
<div
  className="restartAlignment visible"
>
  <Typography
    className="winnerText"
    use="headline5"
  >
    It's a draw!
  </Typography>
  <withRipple(Button)
    dense={true}
    onClick={[Function]}
    raised={true}
  >
    Play Again
  </withRipple(Button)>
</div>
`;

exports[`GameFinished should match snapshot when no one wins 1`] = `
<div
  className="restartAlignment hidden"
>
  <Typography
    className="winnerText"
    use="headline5"
  >
    <Icon
      icon={
        Object {
          "icon": "x",
          "size": "large",
        }
      }
    />
    <span
      className="floatRight"
    >
      reservation
    </span>
  </Typography>
  <withRipple(Button)
    dense={true}
    onClick={[Function]}
    raised={true}
  >
    Play Again
  </withRipple(Button)>
</div>
`;
